Print correct temperature value, and properly display negative temperatures.

Resolves PR kern/36615